src/tui/app/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chat_small_running_h3.snap
---
source: src/harness/tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                        "
"› Ask Codex to do anything              "
"                                        "
