src/tui/app/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: src/harness/tui/src/chatwidget/tests.rs
expression: exec_blob
---
• Ran sleep 1
  └ (no output)
