src/tui/app/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: src/tui/app/src/chatwidget/tests.rs
expression: terminal.backend()
---
"• Booting MCP server: alpha (0s • esc to interrupt)                             "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.3-codex · 100% left · ~/Workspace/codey/src/tui/app                     "
